--- a/www.topmonks.com/src/html/case-studies/go-real-europe/index.html
+++ b/www.topmonks.com/src/html/case-studies/go-real-europe/index.html
@@ -120,11 +120,10 @@
             <p>years in production</p></li>
           <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">4000+</strong>
             <p>travelers</p></li>
-          <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">(:</strong>
-            <p>Excellent reviews on Facebook (4.9&nbsp;out of 5) and Trustpilot (9.6&nbsp;out
-              of&nbsp;10)</p></li>
-          <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">$2.3M</strong>
-            <p>in year-to-date 2018&nbsp;sales, doubling year-to-year</p></li>
+          <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">9.6✩</strong>
+            <p>excellent reviews</p></li>
+          <li class="tm-case-study__project-numbers-item"><strong class="tm-case-study__project-number">200%</strong>
+            <p>year-to-year revenue</p></li>
         </ul>
       </div>
     </div>
