GRE - svg position center

--- a/www.topmonks.com/src/html/case-studies/go-real-europe/index.html
+++ b/www.topmonks.com/src/html/case-studies/go-real-europe/index.html
@@ -1,5 +1,5 @@
 {% extends 'layouts/topmonks.html' %}
-{% set page = '_case-studies__gorealeurope' %}
+{% set page = '_case-studies__go-real-europe' %}
 {% block title %} GoRealEurope - Case Studies - TopMonks{% endblock %}
 {% block head %}
 <link rel="stylesheet" href="/stylesheets/case-studies-common.css">
@@ -32,6 +32,10 @@
   .tm-case-study__section--guide {
     background-image: url("/images/case-studies/go-real-europe/bgnd_all-in.svg");
 
+  }
+
+  .tm-case-study__section--svg {
+    background-position: center;
   }
 
   .tm-case-study__hero {
