GRE - náhled s obr. + logem

--- a/www.topmonks.com/src/html/case-studies/go-real-europe/index.html
+++ b/www.topmonks.com/src/html/case-studies/go-real-europe/index.html
@@ -305,7 +305,7 @@
   </div>
 </section>
 
-{% set caseStudiesData = { title : 'Other Case Studies', activeCase : 'cs' } %}
+{% set caseStudiesData = { title : 'Other Case Studies', activeCase : 'go-real-europe' } %}
 
 {% include 'components/case-studies/index.html' %}
 {% endblock %}
