--- a/studio.topmonks.com/src/html/index.html
+++ b/studio.topmonks.com/src/html/index.html
@@ -322,15 +322,15 @@
         </div>
         <div
           class="portfolio-logo order1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
-          <img src="/images/logo/pricefx.png" alt="Logo Price(Fx)" height="34" width="137">
+         <a title="website of PriceFx" href="https://www.pricefx.eu/site/"><img src="/images/logo/pricefx.png" alt="Logo Price(Fx)" height="34" width="137"></a>
         </div>
         <div
           class="portfolio-logo order3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
-          <img src="/images/logo/techloop.io.png" alt="Logo Techloop.io" height="56" width="226">
+          <a title="website of Techloop.io" href="https://techloop.io/"> <img src="/images/logo/techloop.io.png" alt="Logo Techloop.io" height="56" width="226"></a>
         </div>
         <div
           class="portfolio-logo order5 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
-          <img src="/images/logo/realeurope.png" alt="Logo Go Real Europe" height="68" width="118">
+          <a title="website of Go Real Europe" href="https://www.gorealeurope.com/">     <img src="/images/logo/realeurope.png" alt="Logo Go Real Europe" height="68" width="118"></a>
         </div>
         <div
           class="order2 portfolio-text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
