Footer - social buttons + About - padding

--- a/www.topmonks.com/src/html/shared/footer.html
+++ b/www.topmonks.com/src/html/shared/footer.html
@@ -4,7 +4,7 @@
   <div class="nav-and-contacts">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
+        <div class="about mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
           <h3>About</h3>
           <p>We are your software development partners, experienced with both startup and corporate environment.</p>
           <p>If you like these ideas, come and <a href="/jobs/">join us</a>, and have your <a href="/about-us/">project
@@ -40,7 +40,7 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
           <p>© 2018 TopMonks s.r.o.</p>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
+        <div class="footer_social-buttons mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
           <div class="social-buttons">
             <a href="https://www.linkedin.com/company/topmonks/" title="TopMonks on LinkedIn" rel="me" itemprop="sameAs"
               class="linkedin">
