--- a/caffe.topmonks.cz/src/html/index.html
+++ b/caffe.topmonks.cz/src/html/index.html
@@ -207,7 +207,7 @@
         </div>
         <div class="box-shadow mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           <div class="news-img">
-            <img src="/images/news1.svg" class="img-responsive">
+            <img src="/images/news1.svg" alt="Obrázek článku" class="img-responsive">
           </div>
           <div class="news_content">
             <span class="date">2.</span>
@@ -219,7 +219,7 @@
 
         <div class="box-shadow mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           <div class="news-img">
-            <img src="/images/news2.svg" class="img-responsive">
+            <img src="/images/news2.svg" alt="Obrázek článku" class="img-responsive">
           </div>
           <div class="news_content">
             <div class="date">
@@ -235,7 +235,7 @@
 
         <div class="box-shadow mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           <div class="news-img">
-            <img src="/images/news3.svg" class="img-responsive">
+            <img src="/images/news3.svg" alt="Obrázek článku" class="img-responsive">
           </div>
           <div class="news_content">
             <div class="date">
