Contacts - link to Studio.topmonks

--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -152,7 +152,7 @@
         class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
         itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
         <h3><b>Startup studio</b></h3>
-        <p class="box_text-about"><a href="">TopMonks Startup Monastery</a> can boost your idea from scratch. We are
+        <p class="box_text-about"><a href="https://studio.topmonks.com/">TopMonks Startup Monastery</a> can boost your idea from scratch. We are
           your tech
           angels &amp; first investors.</p>
         <div class="mdc-layout-grid__inner">
