"Create Site" Cleanup
* moved to .scripts folder
* cleanup the APP -> SITE terminology
* creates test-broken-links script as well
* added support for shared assets by default
* removed example for shared asssets

--- a/shared/src/common/footer.html
+++ b/shared/src/common/footer.html
@@ -1,4 +1,3 @@
-<link rel="stylesheet" href="/stylesheets/footer.css">
 
 <footer class="tm-footer">
   <div class="nav-and-contacts">
@@ -7,29 +6,29 @@
         <div class="about mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
           <h3>About</h3>
           <p>We are your software development partners, experienced with both startup and corporate environment.</p>
-          <p>If you like these ideas, come and <a href="/jobs/">join us</a>, and have your <a href="/about-us/">project
-              delivered by us</a>.
-            Or simply <a href="/contact/">visit us</a>. We enjoy <a href="/meet-us/">meeting interesting people</a>.
-          </p>
+          <p>If you like these ideas, come and <a href="https://www.topmonks.com/jobs/">join us</a>, and have your
+            <a href="https://www.topmonks.com/about-us/">project delivered by us</a>.
+            Or simply <a href="https://www.topmonks.com/contact/">visit us</a>.
+            We enjoy <a href="https://www.topmonks.com/meet-us/">meeting interesting people</a>.</p>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
           <h3>Navigation</h3>
           <nav>
             <ul>
-              <li><a href="/">Home</a></li>
+              <li><a href="https://www.topmonks.com/">Home</a></li>
               <li><a href="https://studio.topmonks.com/">Startup Studio</a></li>
               <li><a href="https://blockchain.topmonks.com/">Blockchain Development</a></li>
-              <li><a href="https://prodeti.topmonks.cz/">Programming for Kids</a></li>
+              <li><a href="https://prodeti.topmonks.cz/" hreflang="cs">Programming for Kids</a></li>
               <li><a href="https://blog.topmonks.com/">Blog</a></li>
-              <li><a href="/contact/">Contacts</a></li>
-              <li><a href="/jobs/">Jobs</a></li>
+              <li><a href="https://www.topmonks.com/contact/">Contacts</a></li>
+              <li><a href="https://www.topmonks.com/jobs/">Jobs</a></li>
             </ul>
           </nav>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
           <h3>Contact</h3>
           <span itemprop="legalName">TopMonks s.r.o.</span>
-          <div><a itemprop="email" href="mailto:info@topmonks.com">info@topmonks.com</a></div>
+          <div><a itemprop="email" href="mailto:info&#64;topmonks.com">info&#64;<!-- -->topmonks.com</a></div>
         </div>
       </div>
     </div>
@@ -43,7 +42,7 @@
         <div class="footer_social-buttons mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
           <div class="social-buttons">
             <a href="https://www.linkedin.com/company/topmonks/" title="TopMonks on LinkedIn" rel="me" itemprop="sameAs"
-              class="linkedin">
+               class="linkedin">
               <svg width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
                 <title>linkedin</title>
                 <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -113,7 +112,7 @@
                           <g transform="translate(136.000000, 0.000000)">
                             <circle fill="#1DA1F2" cx="16" cy="16" r="16"></circle>
                             <path d="M22.3125147,12.1875014 C21.8593891,12.3828141 21.3672011,12.5234393 20.8593879,12.5781269 C21.3828261,12.2656265 21.781264,11.7734384 21.9687643,11.1875002 C21.4843887,11.4765631 20.937513,11.6875008 20.3671999,11.7968759 C19.9062618,11.3046879 19.250011,11 18.5234477,11 C17.1250085,11 16.0000072,12.1328139 16.0000072,13.5234405 C16.0000072,13.7187532 16.0234447,13.914066 16.0625072,14.1015662 C13.9687547,13.9921911 12.101565,12.9921899 10.859376,11.460938 C10.6406258,11.8359385 10.5156256,12.2656265 10.5156256,12.7343771 C10.5156256,13.6093781 10.9609386,14.3828165 11.640627,14.8359421 C11.226564,14.8203171 10.8359385,14.7031294 10.5000006,14.5156292 L10.5000006,14.5468792 C10.5000006,15.7734432 11.3671891,16.7890694 12.5234405,17.0234447 C12.3125028,17.0781322 12.08594,17.1093823 11.8593772,17.1093823 C11.6953145,17.1093823 11.5390643,17.0937573 11.3828141,17.0703197 C11.703127,18.0703209 12.6328156,18.7968843 13.742192,18.8203218 C12.8750034,19.5000101 11.7890646,19.8984481 10.6093757,19.8984481 C10.398438,19.8984481 10.2031252,19.8906356 10,19.8671981 C11.1171888,20.5859489 12.4453154,21.0000119 13.8750046,21.0000119 C18.5156352,21.0000119 21.0547007,17.1562573 21.0547007,13.8203159 C21.0547007,13.7109407 21.0547007,13.6015656 21.0468882,13.4921905 C21.5390763,13.132815 21.9687643,12.687502 22.3125147,12.1875014 L22.3125147,12.1875014 Z"
-                              fill="#FFFFFF"></path>
+                                  fill="#FFFFFF"></path>
                           </g>
                         </g>
                       </g>
@@ -133,7 +132,7 @@
                           <g transform="translate(182.000000, 0.000000)">
                             <circle fill="#3B5998" cx="16" cy="16" r="16"></circle>
                             <path d="M19,9 L18,9 C16.2031288,9 14.9921899,10.0781263 15,12 L15,14 L13,14 L13,16 L14.9921899,16 L15,23.0000155 L17,23.0000155 L17,16 L18.7000008,16 L19,14 L17,14 L17,12.2812539 C17,11 17.5716895,11 18.5234441,11 L19,11 L19,9 Z"
-                              fill="#FFFFFF"></path>
+                                  fill="#FFFFFF"></path>
                           </g>
                         </g>
                       </g>
@@ -144,7 +143,7 @@
             </a>
             <a href="https://dribbble.com/TopMonks" title="TopMonks on Dribbble" rel="me" itemprop="sameAs" class="dribbble">
               <svg enable-background="new 0 0 512 512" id="Layer_1" version="1.1" viewBox="0 0 512 512" xml:space="preserve"
-                xmlns="http://www.w3.org/2000/svg" width="33px" height="33px">
+                   xmlns="http://www.w3.org/2000/svg" width="33px" height="33px">
                 <g id="Layer_1_1_">
                   <circle cx="256" cy="256" fill="#E94E8A" r="238.2" />
                   <title>[Logo icon] Dribbble</title>
@@ -152,11 +151,11 @@
                 <g>
                   <circle cx="256" cy="256" fill="none" r="140.5" stroke="#FAFAFA" stroke-miterlimit="10" stroke-width="10" />
                   <path d="M203,124.5c49.9,46.1,112.1,183.4,116.6,256.8" fill="none" stroke="#FAFAFA" stroke-miterlimit="10"
-                    stroke-width="10" />
+                        stroke-width="10" />
                   <path d="M354.8,156.1c-10.8,45.9-154.1,102.5-238.2,82.6" fill="none" stroke="#FAFAFA"
-                    stroke-miterlimit="10" stroke-width="10" />
+                        stroke-miterlimit="10" stroke-width="10" />
                   <path d="M161,359.5c40.9-83.9,162.6-124.3,235.2-95.5" fill="none" stroke="#FAFAFA" stroke-miterlimit="10"
-                    stroke-width="10" />
+                        stroke-width="10" />
                 </g>
               </svg>
             </a>
