--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -33,13 +33,16 @@
     color: var(--tm-contact-darkgrey);
     text-align: left;
   }
+
   span {
     color: var(--tm-contact-darkgrey);
   }
+
   body {
     background: url("https://res.cloudinary.com/topmonks/image/upload/v1543140261/topmonks.com/bngd_site.png") center 30% no-repeat;
     background-size: 100%;
   }
+
   footer span {
     color: #ffffff;
   }
@@ -72,6 +75,7 @@
     padding: 0;
   }
 
+
   .box.address .content {
     padding: 0 16px 8px;
   }
@@ -81,6 +85,7 @@
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
   }
+
   hr {
     background-color: #F3F3F3;
   }
@@ -89,15 +94,46 @@
     text-transform: uppercase;
     line-height: 1.8;
   }
+
   #billing a {
     line-height: 6;
+  }
+
+  @media screen and (min-width: 840px) {
+    p.box_text-about {
+      height: 60px;
+    }
+  }
+
+  @media (max-width: 840px) {
+    p.box_text-about {
+      height: 90px;
+    }
+
+    hr {
+      display: none;
+    }
+  }
+
+  @media (max-width: 480px) {
+    body {
+      line-height: 1.5;
+    }
+
+    p.box_text-about {
+      height: 100px;
+    }
+
+    .box-member img {
+      margin: 2em 0 0;
+    }
   }
 </style>
 {% endblock %}
 
 {% block content %}
 <div itemscope itemtype="https://schema.org/Organization">
-  <section id="contacts-info" class="mdc-layout-grid">
+  <section class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="contact-title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Get In Touch</h2>
@@ -152,7 +188,8 @@
         class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
         itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
         <h3><b>Startup studio</b></h3>
-        <p class="box_text-about"><a href="https://studio.topmonks.com/">TopMonks Startup Monastery</a> can boost your idea from scratch. We are
+        <p class="box_text-about"><a href="https://studio.topmonks.com/">TopMonks Startup Monastery</a> can boost your
+          idea from scratch. We are
           your tech
           angels &amp; first investors.</p>
         <div class="mdc-layout-grid__inner">
@@ -207,10 +244,10 @@
         </a>
         <div class="content">
           <h3 itemprop="name">Prague</h3>
-         <span itemprop="legalName"><b>TopMonks s.r.o.</span>
+          <span itemprop="legalName"><b>TopMonks s.r.o.</b></span>
           <div itemprop="location" itemscope itemtype="https://schema.org/Place">
             <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
-              <span itemprop="streetAddress">Struhařovská 2931/9</b></span><br>
+              <span itemprop="streetAddress"><b>Struhařovská 2931/9</b></span><br>
               <span itemprop="postalCode">141 00</span>
               <span itemprop="addressLocality">Praha 4</span><br>
               <span itemprop="addressCountry">Czech Republic</span>
@@ -301,12 +338,12 @@
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         <h3>Billing address</h3>
-        <span itemprop="legalName"><b>TopMonks s.r.o.</span><br>
+        <span itemprop="legalName"><b>TopMonks s.r.o.</b></span><br>
         <span itemprop="foundingLocation" itemscope="" itemtype="https://schema.org/Place">
           <span itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
-          <span itemprop="streetAddress">Struhařovská 2931/9</span><br>
-          <span itemprop="postalCode">141 00</span>
-          <span itemprop="addressLocality">Praha 4</b></span>
+            <span itemprop="streetAddress"><b>Struhařovská 2931/9</b></span><br>
+            <span itemprop="postalCode"><b>141 00</b></span>
+          <span itemprop="addressLocality"><b>Praha 4</b></span>
           </span>
           </span><br>
         <a href="mailto:invoices@topmonks.com">invoices@topmonks.com</a>
@@ -316,8 +353,8 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         <h3>Bank account</h3>
         <div>Bank: Raiffeisen Bank</div>
-        <div><b>Account number: 780318/5500</div>
-        <div>IBAN: CZ3655000000000000780318</b></div>
+        <div><b>Account number: 780318/5500</b></div>
+        <div><b>IBAN: CZ3655000000000000780318</b></div>
         <div>BIC: RZBCCZPP</div>
       </div>
     </div>
