Contact: Hr + link na career

--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -111,7 +111,9 @@
     }
 
     hr {
-      display: none;
+      width: 288px;
+      margin-top: 2.5em;
+      opacity: 0.4;
     }
   }
 
@@ -210,7 +212,7 @@
         itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
         <h3><b>Happy Makers AKA HR</b></h3>
         <p class="box_text-about">We are always on the lookout for talented Monks to join our team. Take a look at <a
-          href="">Careers</a> page
+          href="https://www.topmonks.com/jobs">Careers</a> page
           or just contact Eliška.</p>
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
