Contact: mobile background

--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -120,6 +120,7 @@
   @media (max-width: 480px) {
     body {
       line-height: 1.5;
+      background-size: auto;
     }
 
     p.box_text-about {
