--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -88,6 +88,8 @@
 
   hr {
     background-color: #F3F3F3;
+    height: 2px;
+    border: none;
   }
 
   #billing {
@@ -114,9 +116,8 @@
     }
 
     hr {
-      width: 288px;
+      width: 736px;
       margin-top: 2.5em;
-      opacity: 0.4;
     }
   }
 
@@ -129,7 +130,9 @@
     p.box_text-about {
       height: 100px;
     }
-
+    hr {
+      width: 288px;
+    }
   }
 </style>
 {% endblock %}
