--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -91,6 +91,9 @@
     height: 2px;
     border: none;
   }
+  .line-between{
+    padding: 24px 0;
+  }
 
   #billing {
     text-transform: uppercase;
@@ -325,7 +328,7 @@
       </div>
     </div>
   </section>
-  <div class="tm-layout-wrapper mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+  <div class="tm-layout-wrapper line-between mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
     <hr>
   </div>
 
