[caffe.topmonks.cz] Fixed spelling and links

--- a/caffe.topmonks.cz/src/html/index.html
+++ b/caffe.topmonks.cz/src/html/index.html
@@ -12,7 +12,7 @@
         <a class="tm-logo" href="/" title="Go to homepage">
           <svg width="148px" height="48px" viewBox="0 0 89 28" version="1.1" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink">
-            <title>tm-caffe-logo</title>
+            <title>TopMonks Caffè</title>
             <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
               <g id="Desktop-HD" transform="translate(-288.000000, -19.000000)" fill-rule="nonzero">
                 <g id="tm-caffe-logo" transform="translate(288.000000, 19.000000)">
@@ -71,13 +71,10 @@
             <a href="#uvod">Aktuálně</a>
           </li>
           <li>
-            <a href="#clanky">Články</a>
-          </li>
-          <li>
             <a href="#seance">Historie</a>
           </li>
           <li>
-            <a href="https://www.topmonks.com/">Topmonks.com</a>
+            <a href="https://www.topmonks.cz/">TopMonks.cz</a>
           </li>
         </ul>
       </div>
@@ -190,8 +187,8 @@
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Co je TopMonks Caffé?</h2>
-          <p>Firma TopMonks, pořádající setkání TopMonks Caffé, je plná zajímavých a šikovných lidí, kteří se nebojí
+          <h2>Co je TopMonks Caffè?</h2>
+          <p>Firma TopMonks, pořádající setkání TopMonks Caffè, je plná zajímavých a šikovných lidí, kteří se nebojí
             svoje zkušenosti předat dál. Mezi tématy najdete programování, moderní technologie, blockchain,
             cestování,
             design a mnoho dalšího.</p>
@@ -209,7 +206,7 @@
           <p>Zkoušeli jste novou technologii a rádi se podělíte o&nbsp;vaše
             zkušenosti?</p>
           <p>Napište nám a určitě se domluvíme.</p>
-          <a class="mail" href="mailto:caffe@topmonks.com">caffe@topmonks.com</a>
+          <a class="mail" href="mailto:info@topmonks.com?subject=TopMonks+Caffe">info@topmonks.com</a>
         </div>
       </div>
     </div>
