[caffe.topmonks.cz] Images and lighthouse optimizations

--- a/caffe.topmonks.cz/src/html/index.html
+++ b/caffe.topmonks.cz/src/html/index.html
@@ -98,7 +98,7 @@
               <p class="news_title">{{upcomingEvent.shortTitle}}</p>
             </div>
 
-            <img src="https://res.cloudinary.com/topmonks/image/upload/v1542985860/caffe.topmonks.cz/TopMonks_Caf%C3%A9_fb_cover_banner.png"
+            <img src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto,w_230/v1542985860/caffe.topmonks.cz/TopMonks_Caf%C3%A9_fb_cover_banner.png"
               alt="Plakát pro topmonks caffe na téma {{upcomingEvent.shortTitle}}" class="news-img upcoming-poster">
 
             <div class="news_content-details mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
